<resources>
    <string name="app_name">Wayfinding</string>
    <string name="title_activity_maps">Wayfinding</string>
    <string name="title_activity_ar_navigation">ARNavigationActivity</string>
    <string name="title_map">Map</string>
    <string name="title_preference">Preference</string>
    <string name="title_account">Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="country">Country</string>
    <string name="username">UserName</string>
    <string name="surname">Surname</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone NO.</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="wrongPasswordReturn">The password is invalid or the user does not have a password.</string>
    <string name="wrongPasswordMsg">Incorrect username or password!</string>
    <string name="privacyProtocol">Privacy Protocol</string>
    <string name="privacyTxt">privacy.txt</string>
    <!-- Map -->
    <string name="transit">transit</string>
    <string name="walking">walking</string>
    <string name="bicycling">bicycling</string>
    <string name="your_location">Your location</string>
    <string name="dialog_msg_no_inputs">No inputs in destination!</string>
    <string name="dialog_msg_add">Added a destination!</string>
    <string name="snackbar_fail_to_get_latest_location">Unable to get the latest location</string>
    <string name="input_search">Search here</string>
    <string name="trans_public">Public</string>
    <string name="trans_walk">Walk</string>
    <string name="trans_cycling">Cycling</string>
    <string name="Set_departure">Set departure</string>
    <string name="select_from_album">Select from album</string>
    <string name="cancel">Cancel</string>
    <!-- Account -->
    <string name="copy_right">Copyright© 2022 Group3 ASE AVR TCD</string>
    <string name="requireAgreementWithTerm">Please agree with terms.</string>


    <!-- Scroll text   -->
    <string-array name="notices">
        <item>🔊Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello</item>
    </string-array>

    <string name="plane_finding">Searching for surfaces&#8230;</string>
</resources>