<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.main.wayfinding.fragment.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_preference"
        android:name="com.main.wayfinding.fragment.preference.PreferenceFragment"
        android:label="@string/title_preference"
        tools:layout="@layout/fragment_preference" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.main.wayfinding.fragment.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>