<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/account_bg2"
    tools:context=".fragment.account.AccountFragment"
    >


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="161dp"

        android:layout_marginTop="50dp"
        android:src="@drawable/ic_baseline_account_circle_24" />


    <ScrollView
        android:id="@+id/user_details"
        android:layout_width="255dp"
        android:layout_height="286dp"
        android:layout_below="@+id/avatar"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"
                android:elevation="10dp"
                android:gravity="center_horizontal"
                android:text="@string/first_name"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"
                android:elevation="10dp"
                android:gravity="center_horizontal"
                android:text="@string/surname"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"
                android:elevation="10dp"
                android:gravity="center_horizontal"
                android:text="@string/country"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"
                android:elevation="10dp"
                android:gravity="center_horizontal"
                android:text="@string/email"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"
                android:elevation="10dp"
                android:gravity="center_horizontal"
                android:text="@string/phone_number"
                android:textSize="20dp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_details"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:text="@string/sign_out" />

    <RelativeLayout
        android:id="@+id/button_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_out"
        android:layout_marginTop="0dp"
        android:gravity="center">

        <Button
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_toRightOf="@+id/login"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />
        <!--     以下Text部分暂时只注释掉文本框内容 AuthLogic里有修改        -->
        <!--        <TextView-->
        <!--            android:id="@+id/tip"-->
        <!--            android:layout_width="168dp"-->
        <!--            android:layout_height="67dp"-->
        <!--            android:layout_marginLeft="90dp"-->
        <!--            android:layout_marginTop="2dp"-->
        <!--            android:text="   "-->
        <!--            android:textSize="34sp"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->

    </RelativeLayout>


</RelativeLayout>