<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/account_bg2"
    android:id="@+id/account3"
    >


    <ImageView
        android:id="@+id/touxiang"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="0dp"
        android:src="@drawable/ic_baseline_account_circle_24" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginlist"
        android:layout_below="@+id/touxiang"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <EditText
            android:id="@+id/username"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:minHeight="70dp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="70dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/loginlist"/>



</RelativeLayout>