<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/accountlogin">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="383dp"
        android:layout_height="144dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_avatar_signup" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_list"
        android:layout_below="@+id/avatar"
        >

        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/account_border"
            android:drawableLeft="@drawable/ic__email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="70dp"
            android:paddingLeft="25dp"
            android:paddingTop="20sp"
            android:text="tester@gmail.com"
            android:textColor="@color/quantum_grey"
            android:textSize="20sp"
            android:drawablePadding="20sp"/>

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_login"
            android:background="@drawable/account_border"
            android:drawableLeft="@drawable/ic_lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="70dp"
            android:text="test123"
            android:paddingTop="20sp"
            android:paddingLeft="25dp"
            android:drawablePadding="20sp"
            android:textColor="@color/quantum_grey"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/confirm"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_list"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="50dp"
        android:text="@string/confirm" />


</RelativeLayout>