<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/account_bg2"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="530dp"
            android:scrollbars="none">


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="50dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="89dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/ic_baseline_account_circle_24" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border"
                    android:elevation="10dp"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:minHeight="70dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border"
                    android:elevation="10dp"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="70dp" />

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border"
                    android:elevation="10dp"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:hint="@string/first_name"
                    />

                <EditText
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border"
                    android:elevation="10dp"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:hint="@string/surname"
                    android:inputType="textPersonName"
                    />

                <EditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border"
                    android:elevation="10dp"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:hint="Country"
                    android:minHeight="70dp" />

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border"
                    android:elevation="10dp"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:minHeight="70dp" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="1dp"
                    android:paddingStart="25dp"
                    android:text="Agree with Term and Conditions" />

                <Button
                    android:id="@+id/create_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Create account"
                    android:textColor="#FFFFFF" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="100dp"
                    android:alpha="0">
                </Button>

            </LinearLayout>
        </ScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>






</RelativeLayout>